add dynamic titles for the website and also put product's names in alt and title attributes of img tag Imported from Changeset 2416

--- a/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Ganedata | Rugged Mobile Computers | EPOS | Software | Hardware ";
 }
     <div id="common-home" class="container-fluid custom-max-width">
         <div class="row">
