--- a/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/ProductDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Ganedata.Core.Entities.Domain
 @model ProductMaster
 @{
-    ViewBag.Title = "ProductDetails";
+    ViewBag.Title = Model.Name +" | "+ ViewBag.SiteDescription;
 }
 <div id="product-product" class="container">
     <div class="row">
