--- a/WarehouseEcommerce/Areas/Shop/Views/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Products/_DynamicFilters.cshtml
@@ -71,7 +71,7 @@
                                 @foreach (var item in Model.Manufacturer)
                                 {
                                     string name = item.Replace(" ", "_").Replace(",", "^");;
-                                    <li class="list-group-item"><input type="checkbox" id="BrandS" class="checkbox-inline" value="@(name)" @(Request.Url.Query.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item)</li>
+                                    <li class="list-group-item"><input type="checkbox" id="BrandS" class="checkbox-inline" title="@(item)" value="@(name)" @(Request.Url.Query.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item)</li>
                                 }
 
 
@@ -94,7 +94,7 @@
                                 @foreach (var item in Model.subCategories)
                                 {
                                     string name = item.Replace(" ", "_").Replace(",", "^");
-                                    <li class="list-group-item" id="type"><input type="checkbox" id="TypeS" class="checkbox-inline" value="@(name)" @(Request.Url.Query.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item)</li>
+                                    <li class="list-group-item" id="type"><input type="checkbox" id="TypeS" class="checkbox-inline" title="@(item)" value="@(name)" @(Request.Url.Query.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item)</li>
                                 }
 
 
