--- a/WMS/Views/Products/Edit.cshtml
+++ b/WMS/Views/Products/Edit.cshtml
@@ -27,6 +27,76 @@
 }
 <h2><span>Edit Product</span></h2>
 <script type="text/javascript">
+
+    MVCxClientGlobalEvents.AddControlsInitializedEventHandler(OnBeginEditLookupGridCallback);
+
+    function OnBeginEditLookupGridCallback(s, e) {
+
+        //e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("frmEditProducts");
+        //var test = MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
+        //var gridValues = JSON.parse(JSON.stringify($("#frmEditProducts").serializeArray()));
+        //var values = JSON.parse(gridValues[gridValues.length - 1].value.split(','));
+        //e.customArgs["data"] = values;
+        //if (values.ProductEditListGridView_DXEditor0 != null) {
+        //    e.customArgs["Name"] = values.ProductEditListGridView_DXEditor0;
+        //}
+        //if (values.ProductEditListGridView_DXEditor1 != null) {
+        //    e.customArgs["SKUCode"] = values.ProductEditListGridView_DXEditor1;
+        //}
+        //if (values.ProductEditListGridView_DXEditor2 != null) {
+        //    e.customArgs["Serialisable"] = values.ProductEditListGridView_DXEditor2;
+
+        //}
+        //if (values.ProductEditListGridView_DXEditor3 != null) {
+        //    e.customArgs["ProcessByPallet"] = values.ProductEditListGridView_DXEditor3;
+        //}
+        //if (values.ProductEditListGridView_DXEditor4 != null) {
+        //    e.customArgs["TopProduct"] = values.ProductEditListGridView_DXEditor4;
+        //}
+        //if (values.ProductEditListGridView_DXEditor5 != null) {
+        //    e.customArgs["BestSellerProduct"] = values.ProductEditListGridView_DXEditor5;
+        //}
+        //if (values.ProductEditListGridView_DXEditor6 != null) {
+
+        //    e.customArgs["SpecialProduct"] = values.ProductEditListGridView_DXEditor6;
+        //}
+        //if (values.ProductEditListGridView_DXEditor7 != null) {
+        //    e.customArgs["OnSaleProduct"] = values.ProductEditListGridView_DXEditor7;
+        //}
+        //var rowIndex = parseInt($("#RowIndexForProductId").val()) || 0;
+        //e.customArgs["ProductID"] = ProductEditListGridView.GetRowKey(rowIndex);
+
+    }
+    function CloseGridLookup() {
+        ProductKitListGridView.ConfirmCurrentSelection();
+        ProductKitListGridView.HideDropDown();
+    }
+    function OnEndEditLookupGridCallback(s, e) {
+        var lastIndex = parseInt($("#LastEditingRowIndex").val()) || 0;
+        //SetGridEditorToRowIndex(lastIndex);
+    }
+
+    function SetGridEditorToRowIndex(index) {
+        ProductEditListGridView.batchEditApi.StartEdit(index, ProductEditListGridView.GetColumnByField($("#LastEditingColIndex").val()).index);
+    }
+
+    function OnDetailsChanged(s, e) {
+        ProductEditListGridView.UpdateEdit();
+    }
+
+    function OnEditGridLookupFocusChanged(s, e) {
+
+        if (e.cellInfo.rowVisibleIndex >= 0) {
+            var index = e.cellInfo.rowVisibleIndex;
+            $("#LastEditingRowIndex").val(index);
+            $("#RowIndexForProductId").val(index);
+        }
+        $("#LastEditingColIndex").val(e.cellInfo.column.fieldName);
+    }
+
+</script>
+
+<script type="text/javascript">
     function OnGridFocusedRowChanged(s, e) {
         var name = s.name;
         if (name.indexOf("Addressgridview") >= 0) {
@@ -204,6 +274,37 @@
                             @Html.EditorFor(m => m.DontMonitorStock)
 
                             @Html.ValidationMessageFor(model => model.DontMonitorStock)
+                        </div>
+                    </div>
+                    <div class="input-group h-100 justify-content-center align-items-center">
+                        @Html.LabelFor(model => model.GroupedProduct, htmlAttributes: new { @class = "col-md-4" })
+                        <div class="col-md-8">
+                            @Html.EditorFor(m => m.GroupedProduct, new { @class = "checkbox" })
+                            @Html.ValidationMessageFor(model => model.GroupedProduct)
+                        </div>
+                    </div>
+                    <div class="input-group h-100 justify-content-center align-items-center" id="dvkit">
+                        @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4 kitlabel" })
+                        <div class="col-md-8">
+
+                            @Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
+                            @Html.Hidden("ProductKit")
+
+                        </div>
+                    </div>
+
+                    <div class="input-group h-100 justify-content-center align-items-center divchkkit">
+                        @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4" })
+                        <div class="col-md-8">
+                            @Html.CheckBoxFor(m => m.Kit, new { @id = "chkkit", @class = "form-control checkbox" })
+                        </div>
+                    </div>
+                    <div class="input-group h-100 justify-content-center align-items-center" id="dvkit">
+                        @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4 kitlabel" })
+                        <div class="col-md-8">
+                            @Html.Action("_EditableKitProductGrid")
+
+
                         </div>
                     </div>
                 </div>
@@ -589,21 +690,7 @@ settings =>
                         </div>
                     </div>
                 </div>
-                <div class="input-group h-100 justify-content-center align-items-center">
-                    @Html.LabelFor(model => model.Kit, htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
-                        @Html.CheckBoxFor(m => m.Kit, new { @id = "chkkit", @class = "form-control" })
-                    </div>
-                </div>
-                <div class="input-group h-100 justify-content-center align-items-center" id="dvkit">
-                    @Html.Label("Product Kit Items", htmlAttributes: new { @class = "col-md-4" })
-                    <div class="col-md-8">
 
-                        @Html.Action("_ProductKitCombobox", new { ProductId = Model.ProductId })
-                        @Html.Hidden("ProductKit")
-
-                    </div>
-                </div>
                 <div class="input-group h-100 justify-content-center align-items-center">
                     @Html.LabelFor(model => model.Discontinued, htmlAttributes: new { @class = "col-md-4" })
                     <div class="col-md-8">
