--- a/WMS/Views/Shared/_ProductKitCombobox.cshtml
+++ b/WMS/Views/Shared/_ProductKitCombobox.cshtml
@@ -31,4 +31,4 @@
         e.QueryableSource = ProductComboboxCustomBinding.ProductMasters;
         e.KeyExpression = "ProductId";
 
-    }).Bind(ViewBag.ProductKitIds).GetHtml()
+    }).Bind(ViewBag.ProductgroupIds).GetHtml()
