--- a/WMS/Views/Products/_ProductRecipeItems.cshtml
+++ b/WMS/Views/Products/_ProductRecipeItems.cshtml
@@ -30,22 +30,9 @@
         {
             settings.Columns.Add(column =>
             {
+                column.FieldName = "Quantity";
                 column.Width = Unit.Percentage(10);
                 column.Caption = "Quantity";
-
-
-                column.SetDataItemTemplateContent(m =>
-                {
-                    var qty = (decimal)DataBinder.Eval(m.DataItem, "Quantity");
-                    var id = (int)DataBinder.Eval(m.DataItem, "ProductId");
-
-                    ViewContext.Writer.Write("<div class='row recipe-item-qty-text'>" + qty + "<b class='btn fa fa-pencil'></b></div>" +
-                                             "<div class='row recipe-item-qty-edit' style='display:none'>" +
-                                             "<div class='row'><input type='text' class='form-control recipe-item-qty-textbox' placeholder='Quantity' value='" + qty + "'/></div>" +
-                                             "<div class='pull-right'> <button type='button' class='btn btn-sm btn-primary kititem-edit-qty-buttons' data-action='UpdateRecipeItemProduct' data-id='" + id + "'><b class='fa fa-save'></b></button><button type='button' class='btn btn-sm btn-danger kititem-edit-qty-buttons'><b class='fa fa-times'></b></button></div>" +
-                                             "</div>" +
-                                             "</div>");
-                });
             });
         }
 
@@ -82,7 +69,8 @@
                 }
                 else
                 {
-                    ViewContext.Writer.Write("<a class='btn fa fa-trash' role='button' data-valueid='" + id + "' data-action='RemoveRecipeItemProduct' title='Delete Recipe Item' data-controller='Products' id='deleteBtn' data-title='Delete Recipe' data-message='This cannot be reversed, are you sure you want to remove this recipe item?' data-toggle='modal' data-target='#confirm-delete'></a>");
+
+                    ViewContext.Writer.Write("<a onclick=''><i class='btn fa fa-pencil'></i></a> <a class='btn fa fa-trash' role='button' data-valueid='" + id + "' data-action='RemoveRecipeItemProduct' title='Delete Recipe Item' data-controller='Products' id='deleteBtn' data-title='Delete Recipe' data-message='This cannot be reversed, are you sure you want to remove this recipe item?' data-toggle='modal' data-target='#confirm-delete'></a>");
                 }
 
             });
